k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
        - name: my-web-app
          image: my-web-app:dev # <-- must match loaded image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
